# atrip

./: .buildinfo  .clang-format  .dir-locals.el  .gitignore  Doxyfile  LICENSE  LICENSE-HEADER  Makefile  Makefile.am  README.org  Sources.mk  atrip.html  atrip.mk  atrip.org  bootstrap.sh  conf.py  config.el  configure.ac  cuda.nix  genindex.html  index.html  objects.inv  search.html  searchindex.js  shell.nix
.doctrees/: atrip.doctree  environment.pickle  index.doctree
.github/workflows/: main.yml
_sources/: atrip.rst.txt  index.rst.txt
bench/: Makefile.am  config.mk  disk-io.cxx  hauta.h  main.cxx  test-cublas-parallel-atrip.cxx  test-cublas-parallel.cxx  test-cuda-sanity.cxx  test_main.cxx  tuples-distribution.cxx  utils.hpp
docs/: Doxyfile  Makefile  Makefile.am  conf.py  shell.nix
doxygen/html/: Atrip_8cxx.html  Atrip_8cxx__incl.map  Atrip_8cxx__incl.md5  Atrip_8d.html  Atrip_8hpp.html  Atrip_8hpp.js  Atrip_8hpp__dep__incl.map  Atrip_8hpp__dep__incl.md5  Atrip_8hpp__incl.map  Atrip_8hpp__incl.md5  Atrip_8hpp_source.html  Blas_8cxx.html  Blas_8cxx.js  Blas_8cxx__incl.map  Blas_8cxx__incl.md5  Blas_8hpp.html  Blas_8hpp.js  Blas_8hpp__dep__incl.map  Blas_8hpp__dep__incl.md5  Blas_8hpp__incl.map  Blas_8hpp__incl.md5  Blas_8hpp_source.html  CUDA_8hpp.html  CUDA_8hpp.js  CUDA_8hpp__dep__incl.map  CUDA_8hpp__dep__incl.md5  CUDA_8hpp__incl.map  CUDA_8hpp__incl.md5  CUDA_8hpp_source.html  Checkpoint_8hpp.html  Checkpoint_8hpp.js  Checkpoint_8hpp__dep__incl.map  Checkpoint_8hpp__dep__incl.md5  Checkpoint_8hpp__incl.map  Checkpoint_8hpp__incl.md5  Checkpoint_8hpp_source.html  Complex_8cxx.html  Complex_8cxx.js  Complex_8cxx__incl.map  Complex_8cxx__incl.md5  (+579 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  (+81 more)
doxygen/xml/: Atrip_8cxx.xml  Atrip_8hpp.xml  Blas_8cxx.xml  Blas_8hpp.xml  CUDA_8hpp.xml  Checkpoint_8hpp.xml  Complex_8cxx.xml  Complex_8hpp.xml  DatabaseCommunicator_8cxx.xml  DatabaseCommunicator_8hpp.xml  Debug_8hpp.xml  Doxyfile.xml  Equations_8cxx.xml  Equations_8hpp.xml  RankMap_8hpp.xml  SliceUnion_8hpp.xml  Slice_8hpp.xml  Tuples_8cxx.xml  Tuples_8hpp.xml  Types_8hpp.xml  Unions_8hpp.xml  Utils_8hpp.xml  atrip_8hpp.xml  classatrip_1_1SliceUnion.xml  dir_60408188ff2dfa1650f8b8c81a499cb7.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  dir_f49edc0362c5951c56e897d397fa5ee8.xml  index.xml  namespaceatrip.xml  namespaceatrip_1_1group__and__sort.xml  namespaceatrip_1_1traits.xml  namespaceatrip_1_1traits_1_1mpi.xml  structatrip_1_1ABHH.xml  structatrip_1_1ABPH.xml  structatrip_1_1Atrip.xml  structatrip_1_1Atrip_1_1Input.xml  structatrip_1_1Atrip_1_1Output.xml  structatrip_1_1Checkpoint.xml  structatrip_1_1ClusterInfo.xml  (+21 more)
etc/: ctf.mk  ctf_rules.mk
etc/config/: clang.mk  gcc-debug.mk  gcc.mk  icc-debug.mk  icc.mk  lib.mk
etc/emacs/: html.el
etc/env/lumi/: modules  modules-newcray  modules.amd  modules.amd.omnitrace  modules.cpu
etc/env/raven/: cuda  cuda-openacc
etc/env/vsc4/: icc.sh
etc/m4/: atrip-def.m4  atrip_cublas.m4  atrip_openacc.m4
etc/make/: ctf.mk  ctf_vars.mk  emacs.mk
etc/nix/: clang.nix  ctf.nix  openblas.nix  scalapack.nix  vendor-shell.nix
etc/nix/overlays/: openmpi.nix
include/: atrip.hpp
include/atrip/: Atrip.hpp  Blas.hpp  CUDA.hpp  Checkpoint.hpp  Complex.hpp  DatabaseCommunicator.hpp  Debug.hpp  Equations.hpp  Malloc.hpp  Operations.hpp  RankMap.hpp  Slice.hpp  SliceUnion.hpp  Tuples.hpp  Types.hpp  Unions.hpp  Utils.hpp
integration-tests/: Makefile.am  run-h2o.sh.in
misc/: naive-tuples.lisp
sphinx/.doctrees/: environment.pickle
src/: Makefile.am  atrip.hpp
src/atrip/: Acc.hpp  Atrip.cxx  Atrip.hpp  Blas.cxx  Blas.hpp  CTF.hpp  CTFReader.cxx  CTFReader.hpp  CTF_disk_reader.cxx  CTF_disk_reader.hpp  CUDA.hpp  Chrono.hpp  Complex.cxx  Complex.hpp  DatabaseCommunicator.cxx  Debug.hpp  DiskReader.cxx  DiskReader.hpp  Equations.cxx  Equations.hpp  HIP.hpp  Malloc.hpp  Operations.hpp  RankMap.cxx  RankMap.hpp  Reader.hpp  Slice.cxx  Slice.hpp  SliceUnion.cxx  SliceUnion.hpp  Tuples.cxx  Tuples.hpp  Types.hpp  Unions.hpp  Utils.hpp  disk_reader.cxx  disk_reader.hpp  mpi.hpp
test/: Makefile.am  main.cxx
tools/: ci-format.sh  configure-benches.sh  dir-locals.el.in  lsp.sh
